--- a/index.html
+++ b/index.html
@@ -7,15 +7,19 @@
     <body> 
         <div class="navbar">
             <a class="active" href="#">Home</a>
-            <a href="#">About</a>
+            <a href="#people">People</a>
             <a href="#">Services</a>
             <a href="#">Contact</a>
           </div>
   
         <div class="Home_top">
             <h1>EasySharks</h1>
-            <h2>5 (4) Italians across the world spreading knowlege about Marine Biology</h2>
+            <h2> Italians across the world spreading knowlege about Marine Biology</h2>
+        </div>
+        
+        <div id = "people">
+            <h1> People </h1>
         </div> 
     </body>
 
-</html>
+</html> 
